[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
env_logger = "0.11.8"
mediasoup = "0.20.0"
redis = "1.0.3"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
uuid = "1.20.0"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "pubsvr"
path = "src/pub_svr.rs"

[[bin]]
name = "subsvr"
path = "src/sub_svr.rs"
